security_groups.tf
#----------------------------------------------------------------
# security groups
#----------------------------------------------------------------
# allow keep port
resource aws_security_group "keep" {
  name        = "allow-ecdsa"
  description = "Allow port 3919(keep ecdsa communication port)"

  ingress {
    from_port   = 3919
    to_port     = 3919
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "ssh" {
  name        = "allow-ssh"
  description = "allow ssh access to the server"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "loki" {
  name        = "allow-loki"
  description = "grafana whitelist"

  ingress {
    from_port = 3100
    to_port   = 3100
    protocol  = "tcp"
    cidr_blocks = [
      "104.196.187.103/32",
      "35.233.198.143/32",
      "35.239.94.5/32",
      "35.224.156.39/32",
      "34.72.224.67/32",
      "34.69.65.175/32",
      "35.223.156.39/32",
      "34.72.163.126/32",
      "34.67.61.75/32",
      "34.71.159.145/32",
      "35.202.76.74/32",
      "35.225.91.170/32",
      "35.192.14.84/32",
      "34.69.111.215/32",
      "104.154.73.15/32",
      "35.239.233.2/32",
      "35.202.170.185/32",
      "35.224.62.148/32",
      "34.70.247.232/32",
      "35.239.228.168/32",
      "35.184.203.1/32",
      "34.68.243.199/32",
      "35.184.82.156/32",
      "35.226.77.201/32",
      "35.232.165.163/32",
      "104.154.186.57/32",
      "35.239.183.253/32",
      "34.68.83.43/32",
      "35.224.241.132/32",
      "35.239.141.38/32",
      "34.67.32.253/32",
      "35.232.163.40/32",
      "35.232.31.131/32",
      "10.20.0.91/32",
      "35.222.200.66/32",
      "104.197.50.166/32",
      "35.232.72.188/32",
      "35.222.83.115/32",
      "34.66.244.3/32",
      "35.222.217.237/32",
      "35.223.253.104/32",
      "34.68.216.169/32",
      "35.184.112.179/32",
      "34.71.145.245/32",
      "34.68.229.79/32",
      "34.68.244.46/32",
      "34.71.152.20/32",
      "104.155.175.21/32",
      "34.71.38.173/32",
      "104.154.215.108/32",
      "35.225.196.236/32",
      "104.154.201.210/32",
      "35.202.126.57/32",
      "35.239.213.115/32",
      "34.66.102.236/32",
      "34.71.215.109/32",
      "35.246.7.173/32",
      "52.189.69.217/32"
    ]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }


}

resource "aws_security_group" "grafana" {
  name        = "allow-grafana"
  description = "grafana whitelist"

  ingress {
    from_port = 9090
    to_port   = 9090
    protocol  = "tcp"
    cidr_blocks = [
      "104.196.187.103/32",
      "35.233.198.143/32",
      "35.239.94.5/32",
      "35.224.156.39/32",
      "34.72.224.67/32",
      "34.69.65.175/32",
      "35.223.156.39/32",
      "34.72.163.126/32",
      "34.67.61.75/32",
      "34.71.159.145/32",
      "35.202.76.74/32",
      "35.225.91.170/32",
      "35.192.14.84/32",
      "34.69.111.215/32",
      "104.154.73.15/32",
      "35.239.233.2/32",
      "35.202.170.185/32",
      "35.224.62.148/32",
      "34.70.247.232/32",
      "35.239.228.168/32",
      "35.184.203.1/32",
      "34.68.243.199/32",
      "35.184.82.156/32",
      "35.226.77.201/32",
      "35.232.165.163/32",
      "104.154.186.57/32",
      "35.239.183.253/32",
      "34.68.83.43/32",
      "35.224.241.132/32",
      "35.239.141.38/32",
      "34.67.32.253/32",
      "35.232.163.40/32",
      "35.232.31.131/32",
      "10.20.0.91/32",
      "35.222.200.66/32",
      "104.197.50.166/32",
      "35.232.72.188/32",
      "35.222.83.115/32",
      "34.66.244.3/32",
      "35.222.217.237/32",
      "35.223.253.104/32",
      "34.68.216.169/32",
      "35.184.112.179/32",
      "34.71.145.245/32",
      "34.68.229.79/32",
      "34.68.244.46/32",
      "34.71.152.20/32",
      "104.155.175.21/32",
      "34.71.38.173/32",
      "104.154.215.108/32",
      "35.225.196.236/32",
      "104.154.201.210/32",
      "35.202.126.57/32",
      "35.239.213.115/32",
      "34.66.102.236/32",
      "34.71.215.109/32",
      "35.246.7.173/32",
      "52.189.69.217/32"
    ]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
